--- a/web/output.css
+++ b/web/output.css
@@ -1463,6 +1463,10 @@ video {
   height: 100vh;
 }
 
+.h-28 {
+  height: 7rem;
+}
+
 .max-h-\[1060px\] {
   max-height: 1060px;
 }
@@ -1541,6 +1545,10 @@ video {
 
 .min-h-full {
   min-height: 100%;
+}
+
+.min-h-\[60px\] {
+  min-height: 60px;
 }
 
 .w-1 {
@@ -1895,6 +1903,10 @@ video {
   width: 1px;
 }
 
+.w-\[568px\] {
+  width: 568px;
+}
+
 .min-w-\[100\%\] {
   min-width: 100%;
 }
@@ -2193,6 +2205,38 @@ video {
 
 .min-w-\[94px\] {
   min-width: 94px;
+}
+
+.min-w-\[114px\] {
+  min-width: 114px;
+}
+
+.min-w-\[127px\] {
+  min-width: 127px;
+}
+
+.min-w-\[144px\] {
+  min-width: 144px;
+}
+
+.min-w-\[236px\] {
+  min-width: 236px;
+}
+
+.min-w-\[288px\] {
+  min-width: 288px;
+}
+
+.min-w-\[30px\] {
+  min-width: 30px;
+}
+
+.min-w-\[88px\] {
+  min-width: 88px;
+}
+
+.min-w-\[98px\] {
+  min-width: 98px;
 }
 
 .max-w-3xl {
@@ -2678,6 +2722,10 @@ video {
   gap: 8px;
 }
 
+.gap-measurements-gap-8 {
+  gap: 8px;
+}
+
 .gap-x-5 {
   -moz-column-gap: 1.25rem;
        column-gap: 1.25rem;
@@ -2740,6 +2788,24 @@ video {
 
 .gap-y-\[28\.7px\] {
   row-gap: 28.7px;
+}
+
+.gap-x-2\.5 {
+  -moz-column-gap: 0.625rem;
+       column-gap: 0.625rem;
+}
+
+.gap-x-\[74px\] {
+  -moz-column-gap: 74px;
+       column-gap: 74px;
+}
+
+.gap-y-20 {
+  row-gap: 5rem;
+}
+
+.gap-y-4 {
+  row-gap: 1rem;
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
@@ -3196,6 +3262,10 @@ video {
 
 .bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/title2\@3x\.png\'\)\] {
   background-image: url('/wp-content/themes/business-setup/web/public/title2@3x.png');
+}
+
+.bg-\[url\(\'\.\/public\/feedback-form\@3x\.png\'\)\] {
+  background-image: url('./public/feedback-form@3x.png');
 }
 
 .bg-cover {
@@ -3672,6 +3742,11 @@ video {
   padding-bottom: 1px;
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .pb-0 {
   padding-bottom: 0px;
 }
@@ -4038,6 +4113,14 @@ video {
 
 .pt-px {
   padding-top: 1px;
+}
+
+.pl-numbers-4 {
+  padding-left: 4px;
+}
+
+.pt-\[0\.5px\] {
+  padding-top: 0.5px;
 }
 
 .text-left {
@@ -6491,6 +6574,10 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
     gap: 89px;
   }
 
+  .lg\:gap-\[37px\] {
+    gap: 37px;
+  }
+
   .lg\:overflow-x-auto {
     overflow-x: auto;
   }
@@ -7152,6 +7239,10 @@ body .navigation .stm_lms_account_dropdown ul.dropdown-menu li .dropdown_menu_it
 
   .mq750\:gap-numbers-64 {
     gap: 64px;
+  }
+
+  .mq750\:gap-\[18px\] {
+    gap: 18px;
   }
 
   .mq750\:px-\[93px\] {
