--- a/web/output.css
+++ b/web/output.css
@@ -3268,6 +3268,62 @@ video {
   background-image: url('./public/feedback-form@3x.png');
 }
 
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/avatar10\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/avatar10@3x.png');
+}
+
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/avatar11\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/avatar11@3x.png');
+}
+
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/avatar12\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/avatar12@3x.png');
+}
+
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/avatar1\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/avatar1@3x.png');
+}
+
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/avatar2\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/avatar2@3x.png');
+}
+
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/avatar3\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/avatar3@3x.png');
+}
+
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/avatar4\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/avatar4@3x.png');
+}
+
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/avatar5\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/avatar5@3x.png');
+}
+
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/avatar7\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/avatar7@3x.png');
+}
+
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/avatar8\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/avatar8@3x.png');
+}
+
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/avatar9\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/avatar9@3x.png');
+}
+
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/avatar\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/avatar@3x.png');
+}
+
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/feedback-form\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/feedback-form@3x.png');
+}
+
+.bg-\[url\(\'\/wp-content\/themes\/business-setup\/web\/public\/hero\@3x\.png\'\)\] {
+  background-image: url('/wp-content/themes/business-setup/web/public/hero@3x.png');
+}
+
 .bg-cover {
   background-size: cover;
 }
